--- a/web_server/html/settings.json
+++ b/web_server/html/settings.json
@@ -1,1 +1,29 @@
-{"ssid":"Wi-PWN","ssidHidden":0,"password":"","apChannel":1,"apScanHidden":1,"deauthReason":1,"attackTimeout":0,"attackPacketRate":10,"clientScanTime":15,"attackEncrypted":1,"useLed":1,"channelHop":0,"multiAPs":1,"multiAttacks":1,"macInterval":4,"beaconInterval":0,"ledPin":2,"darkMode":0,"simplify":0,"newUser":0,"detectorChannel":1,"detectorAllChannels":1,"alertPin":2,"invertAlertPin":1,"detectorScanTime":200}
+{  
+   "ssid":"Wi-PWN",
+   "ssidHidden":0,
+   "password":"",
+   "apChannel":1,
+   "apScanHidden":1,
+   "deauthReason":1,
+   "attackTimeout":0,
+   "attackPacketRate":10,
+   "clientScanTime":15,
+   "attackEncrypted":1,
+   "useLed":1,
+   "channelHop":0,
+   "multiAPs":1,
+   "multiAttacks":1,
+   "macInterval":4,
+   "beaconInterval":0,
+   "ledPin":2,
+   "darkMode":0,
+   "simplify":0,
+   "newUser":0,
+   "detectorChannel":1,
+   "detectorAllChannels":1,
+   "alertPin":2,
+   "invertAlertPin":1,
+   "detectorScanTime":200,
+   "pins":"101101",
+   "pinNames":"relay 1;relay 2; relay 3; relay 4;relay 5;relay 6"
+}
