--- a/web_server/html/settings.json
+++ b/web_server/html/settings.json
@@ -25,5 +25,5 @@
    "invertAlertPin":1,
    "detectorScanTime":200,
    "pins":"101101",
-   "pinNames":"relay 1;relay 2; relay 3; relay 4;relay 5;relay 6"
+   "pinNames":"Pin 3;Pin 4;Pin 5;Pin 6;Pin 7;Pin 8"
 }
