--- a/web_server/html/settings.json
+++ b/web_server/html/settings.json
@@ -24,6 +24,8 @@
    "alertPin":2,
    "invertAlertPin":1,
    "detectorScanTime":200,
+   "darkMode":1,
+   "cache":1,
    "pins":"101101",
    "pinNames":"Pin 3;Pin 4;Pin 5;Pin 6;Pin 7;Pin 8"
 }
