[*] Updated some bits of the app
https://play.google.com/store/apps/details?id=samdd.wipwn

--- a/android_app/app/build.gradle
+++ b/android_app/app/build.gradle
@@ -5,11 +5,11 @@ android {
     buildToolsVersion "25.0.2"
     useLibrary "org.apache.http.legacy"
     defaultConfig {
-        applicationId "samdd.wipwn"
+        applicationId "samdd.wi_pwn"
         minSdkVersion 19
         targetSdkVersion 25
-        versionCode 1
-        versionName "1.0"
+        versionCode 9
+        versionName "9.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
