[+] Some improvements to the app
Yes, I am aware of all the screen recording of all the issues on the devices.

I'm planning on ironing all of them out soon... King_Jasper#3110 & FeelTheFire#6381 have been a great help :)

--- a/android_app/app/src/main/AndroidManifest.xml
+++ b/android_app/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="samdd.wipwn">
     <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="com.android.vending.BILLING" />
 
     <application
         android:allowBackup="true"
@@ -19,6 +20,10 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".DonationsActivity"
+            android:label="Donations">
         </activity>
     </application>
 
