--- a/android_app/app/build.gradle
+++ b/android_app/app/build.gradle
@@ -8,8 +8,8 @@ android {
         applicationId "samdd.wipwn"
         minSdkVersion 14
         targetSdkVersion 25
-        versionCode 11
-        versionName "11"
+        versionCode 14
+        versionName "12.2"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -28,6 +28,7 @@ dependencies {
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support:design:25.3.1'
     compile 'com.android.support:percent:25.3.1'
+    compile 'org.sufficientlysecure:donations:2.5'
     compile 'com.squareup.okhttp3:okhttp:3.8.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     testCompile 'junit:junit:4.12'
