:abcd: :pencil: Switching to translation engine 30%

--- a/web_server/html/Gemfile
+++ b/web_server/html/Gemfile
@@ -3,6 +3,7 @@ source "https://rubygems.org"
 # If you have any plugins, put them here!
 group :jekyll_plugins do
 	gem 'jekyll-tidy'
+	gem 'jekyll-multiple-languages-plugin'
 end
 
 # Windows does not include zoneinfo files, so bundle the tzinfo-data gem
