--- a/web_server/html/_config.yml
+++ b/web_server/html/_config.yml
@@ -1,17 +1,20 @@
 # Exclude some folders & files
 exclude: ["_*", "package.json", "node_modules", "Gemfile*"]
-
 destination: ../output/html
 
-# Gem plugin(s)
-plugins: [jekyll-tidy]
+# Language plugin
+languages: ["english"]
 
+
+# Gem plugin(s)
+plugins: [jekyll-tidy, jekyll-multiple-languages-plugin]
 # Compress outputted sass
 sass:
     style: compressed
 
+
+
 # Set port
 port: 1337
-
 # Enable access from local network ~ not just localhost
 host: 0.0.0.0
