--- a/web_server/html/_i18n/english.yml
+++ b/web_server/html/_i18n/english.yml
@@ -7,6 +7,11 @@
 # For example
 # `$$click here$$` => `<a href="mypage">click here</a>`
 # 
+translation:
+    # Uncomment & insert your name here
+    #name: "my-name"
+    # Uncomment & insert a link to your Github / site
+    #url: "https://github.com/my-name"
 
 nav:
     scan: "Scan"
@@ -15,6 +20,7 @@ nav:
     detector: "Detector"
     control: "Control"
     settings: "Settings"
+    info: "Info"
 
 global:
     save: "Save"
@@ -27,6 +33,7 @@ global:
     reboot: "Reboot"
     guide: "Guide"
     footer: "Designed by Sam Denty - @samdenty99"
+    translated-by: "translated by $$"
 
 setup:
     page-1:
