--- a/web_server/html/_i18n/italian.yml
+++ b/web_server/html/_i18n/italian.yml
@@ -7,6 +7,13 @@
 # For example
 # `$$click here$$` => `<a href="mypage">click here</a>`
 # 
+# Try and retain the case, for example if the word is capitalized keep it capitalized
+# 
+translation:
+    # Uncomment & insert your name here
+    name: "edo2313"
+    # Uncomment & insert a link to your Github / site
+    url: "https://github.com/edo-2313"
 
 nav:
     scan: "Scansione"
@@ -15,6 +22,7 @@ nav:
     detector: "Rilevatore"
     control: "Controllo"
     settings: "Impostazioni"
+    info: "Info"
 
 global:
     save: "Salva"
@@ -27,6 +35,7 @@ global:
     reboot: "Riavvia"
     guide: "Guida"
     footer: "Creato da Sam Denty - @samdenty99"
+    translated-by: "tradotto da $$"
 
 setup:
     page-1:
