--- a/web_server/html/_i18n/italian.yml
+++ b/web_server/html/_i18n/italian.yml
@@ -1,14 +1,30 @@
-# Wi-PWN translation file template
+#  _ _ _ _     _____ _ _ _ _____ 
+# | | | |_|___|  _  | | | |   | |
+# | | | | |___|   __| | | | | | |
+# |_____|_|   |__|  |_____|_|___|
+#        TRANSLATION FILE
 # 
-# When you see 
-#              $$
-# This means it's going to be replaced with HTML
-# # # # # # # # # # # # # # # # # # # # # # # # #
-# For example
-# `$$click here$$` => `<a href="mypage">click here</a>`
+# Format:
+#   What is '$$'?
+#       '$$' is a variable thats replaced with HTML
+#       For example:
+#          `$$click here$$`     =>   `<a href="mypage">click here</a>`
+#          `translated by $$`   =>   `translated by sam`
+#
+#   DO NOT REMOVE THE INDENTATION!
+#       The indentation is critical to YAML, so please don't change it
+#   
+#   Try and retain the case, for example:
+#       If it is capitalized keep it capitalized
+#   
+#   What are the `translation.name` & `translation.url`?
+#       These are strings that will be added to the footer & info page
+#   
+#   I'm unsure about how to translate something / I have a question
+#       No problem! feel free to ask something over at
+#       https://wi-pwn.samdd.me/discord/
 # 
-# Try and retain the case, for example if the word is capitalized keep it capitalized
-# 
+
 translation:
     # Uncomment & insert your name here
     name: "edo2313"
