--- a/web_server/html/_i18n/german.yml
+++ b/web_server/html/_i18n/german.yml
@@ -1,5 +1,3 @@
-
-
 nav:
     scan: "Scannen"
     users: "Benutzer"
@@ -203,49 +201,49 @@ info:
         A: "Das Laden von sysinfo.json ist fahlgeschlagen"
         B: "OTA Update"
         C: "Uploaden"
-        D: "Other projects"
-        E: "Report bug"
-        F: "Other projects"
+        D: "Andere Projekte"
+        E: "Fehler melden"
+        F: "Andere Projekte"
 
 error:
     title: "404"
-    page-header: "Page not found"
+    page-header: "Seite nicht gefunden"
 
 errors:
-    bad-response: "ERROR: Bad response"
-    E0: "Failed to scan for networks!"
-    E6: "Reconnect to Wi-Fi network"
-    E7: "INFO: No Wi-Fi network(s) selected!"
-    E10: "Invalid MAC address"
-    E15: "No network(s) selected!"
-    E16: "SSID list full (E16)"
-    E17: "ERROR: Reset the settings"
-    E18: "Failed to save settings!"
-    E19: "Failed to save settings!"
-    E20: "Failed to reset settings!"
-    E21: "Failed to reset settings!"
-    E22: "Reconnect and reload this page"
-    E23: "Failed to restart Wi-PWN!"
-    E24: "Failed to restart Wi-PWN!"
-    E25: "ERROR: Reset the settings"
-    E26: "Failed to restart Wi-PWN!"
-    E27: "Failed to restart Wi-PWN!"
-    E28: "Failed to save settings!"
-    E29: "Failed to save settings!"
-    E30: "Failed to start detector!"
-    E31: "Failed to start detector!"
-    E32: "Failed to save!"
-    E33: "Failed to save!"
-    E34: "Failed to load control.json"
-    E37: "ERROR: Failed to change PIN name"
-    E39: "Failed to update PIN name!"
-    E40: "Failed to update PIN name!"
-    E41: "Failed to reset saved entries!"
-    E42: "Failed to reset saved entries!"
-    E95: "ERROR: Failed to load settings.json"
-    E96: "Reconnect and reload this page"
-    E97: "Didn't receive a response!"
-    E98: "Failed to parse scan results!"
-    E99: "Cleared, don't forget to click save!"
-    E100: "Failed to parse saved SSIDs, clearing..."
-S1: "Are you sure you want to reboot Wi-PWN?"
+    bad-response: "ERROR: Fehlerhafte Antwort"
+    E0: "Scannen nach Netzwerken fehlgeschlagen!"
+    E6: "Mit WLAN neu verbinden"
+    E7: "INFO: Keine WLAN Netzwerke ausgewählt!"
+    E10: "Ungültige MAC Adresse"
+    E15: "Kein(e) Nzwerk(e) ausgewählt!"
+    E16: "SSID Liste voll (E16)"
+    E17: "ERROR: Setzen Sie die Einstellungen zurück"
+    E18: "Speichern der Einstellungen fehlgeschlagen!"
+    E19: "Speichern der Einstellungen fehlgeschlagen!"
+    E20: "Zurücksetzen der Einstellungen fehlgeschlagen!"
+    E21: "Zurücksetzen der Einstellungen fehlgeschlagen!"
+    E22: "Verbinden Sie sich neu und laden Sie die Seite neu"
+    E23: "Fehler beim Neustarten von Wi-PWN!"
+    E24: "Fehler beim Neustarten von Wi-PWN!"
+    E25: "ERROR: Setzen Sie die Einstellungen zurück"
+    E26: "Fehler beim Neustarten von Wi-PWN!"
+    E27: "Fehler beim Neustarten von Wi-PWN!"
+    E28: "Speichern der Einstellungen fehlgeschlagen!"
+    E29: "Speichern der Einstellungen fehlgeschlagen!"
+    E30: "Fehler beim Starten des Detektors"
+    E31: "Fehler beim Starten des Detektors"
+    E32: "Speichern fehlgeschlagen!"
+    E33: "Speichern fehlgeschlagen!"
+    E34: "Fehler beim Laden von control.json"
+    E37: "ERROR: PIN Änderung fehlgeschlagen"
+    E39: "Updaten des PIN Namens fehlgeschlagen!"
+    E40: "Updaten des PIN Namens fehlgeschlagen!"
+    E41: "Zurücksetzen der gespeicherten Einträge fehlgeschlagen!"
+    E42: "Zurücksetzen der gespeicherten Einträge fehlgeschlagen!"
+    E95: "Fehler beim Laden von settings.json"
+    E96: "Verbinden Sie sich neu und laden Sie die Seite neu"
+    E97: "Keine Antwort erhalten!"
+    E98: "Scanergebnisse konnten nicht analysiert werden!"
+    E99: "Gelöscht, vergessen Sie nicht, auf "Speichern" zu klicken!"
+    E100: "Fehler beim Analysieren der gespeicherten SSIDs, bereinige..."
+S1: "Sind Sie sicher dass Sie Wi-PWN neustarten möchten?"
