--- a/web_server/html/_i18n/russian.yml
+++ b/web_server/html/_i18n/russian.yml
@@ -24,6 +24,9 @@
 #       No problem! feel free to ask something over at
 #       https://wi-pwn.samdd.me/discord/
 # 
+#   What encoding should I use?
+#       UTF-8 ~ jekyll doesn't support any other encodings
+# 
 
 translation:
     # Uncomment & insert your name here
