--- a/web_server/html/_i18n/german.yml
+++ b/web_server/html/_i18n/german.yml
@@ -57,6 +57,7 @@ global:
     translated-by: "Übersetzt von $$"
 
 setup:
+    title: "Konfiguration"
     page-1:
         header: "Geschäftsbedingungen"
         card:
