--- a/web_server/html/_i18n/hebrew.yml
+++ b/web_server/html/_i18n/hebrew.yml
@@ -57,6 +57,7 @@ global:
     translated-by: "$$ תורגם על ידי"
 
 setup:
+    title: "להכין"
     page-1:
         header: "תנאים והגבלות"
         card:
