--- a/web_server/html/_i18n/russian.yml
+++ b/web_server/html/_i18n/russian.yml
@@ -57,6 +57,7 @@ global:
     translated-by: "Переведено $$"
 
 setup:
+    title: "настроить"
     page-1:
         header: "Условия и положения"
         card:
